[gd_scene load_steps=13 format=3 uid="uid://bgku0hj0a5f4f"]

[ext_resource type="Script" path="res://spells/fire.gd" id="1_qoq8v"]
[ext_resource type="Texture2D" uid="uid://d3avedjaqvt6b" path="res://assets/textures/fire_sheet.png" id="2_suj6g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5fvnu"]
atlas = ExtResource("2_suj6g")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1v54"]
atlas = ExtResource("2_suj6g")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0v2a"]
atlas = ExtResource("2_suj6g")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2nfr"]
atlas = ExtResource("2_suj6g")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsty6"]
atlas = ExtResource("2_suj6g")
region = Rect2(512, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c14qf"]
atlas = ExtResource("2_suj6g")
region = Rect2(544, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxp06"]
atlas = ExtResource("2_suj6g")
region = Rect2(576, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gfs8"]
atlas = ExtResource("2_suj6g")
region = Rect2(608, 384, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_em7u5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fvnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1v54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0v2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2nfr")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsty6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c14qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxp06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gfs8")
}],
"loop": false,
"name": &"damage",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xhyj7"]
radius = 8.0
height = 32.0

[node name="Fire" type="Area2D" groups=["attack"]]
top_level = true
texture_filter = 1
scale = Vector2(0.4, 0.4)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_qoq8v")
metadata/_edit_group_ = true

[node name="VisibleOnScreen" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_em7u5")
animation = &"damage"
frame = 3
frame_progress = 1.0

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xhyj7")

[connection signal="screen_exited" from="VisibleOnScreen" to="." method="_on_visible_on_screen_screen_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
